# BIGFAM.v2

./: .gitignore  LICENSE  README.md  environment.yaml  pyproject.toml
analysis/figure/: fig_1.py  fig_2.py  fig_s1.py  fig_s2.py  fig_s3.py  fig_s4.py
analysis/simulation/: measure_slope_test_power_wls.py
bigfam/: __init__.py
data/test/: binary.tsv  continuous.tsv  covariate.tsv  relationship.tsv
notebook/: quickstart.ipynb
src/bigfam/: __init__.py  bigfam.py
src/bigfam/estimation/: __init__.py  slope_test.py  variance.py  x_estimation.py
src/bigfam/frreg/: __init__.py  binary.py  continuous.py  helpers.py
src/bigfam/io/: __init__.py  loaders.py
src/bigfam/processing/: __init__.py  cleaning.py  pairing.py
src/bigfam/utils/: __init__.py  group_meta.py  pairs.py  stats.py
test/: test_bigfam_smoke.py
